--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Roboto&display=swap');
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  font-family: 'Fira Sans', sans-serif;
+}
+
+p {
+  font-size: medium;
+  font-family: 'Roboto', sans-serif;
+}
+
