--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>Home</p>
+<h1 class="mt-5">Home</h1>
+<p class="lead">
+  Playground just to learn <code>RxJs</code>!
+  Navigate the <code>examples</code> section and enjoy <i class="bi bi-emoji-sunglasses"></i>
+</p>
