Caveat font added, styles improvements

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <h1 class="mt-5">Home</h1>
 <p class="lead">
   Playground just to learn <code>RxJs</code>!
-  Navigate the <code>examples</code> section and enjoy <i class="bi bi-emoji-sunglasses"></i>
+  Navigate the <code>examples</code> section
 </p>
+<blockquote>Enjoy</blockquote>
