Added http get example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,8 +35,7 @@
       themed with
       <img width="20" height="20" src="./assets/bootstrap-logo.svg" alt="BootstrapLogo">
       and at last, but not least, with tons of
-      <i class="bi bi-heart-fill"
-         style="color: crimson;">
+      <i class="bi bi-heart-fill text-danger">
       </i>
     </p>
   </div>
